fixing overflowing elements in the body

--- a/bootstrap/css/custom style.css
+++ b/bootstrap/css/custom style.css
@@ -11,7 +11,7 @@ body{
 }
 .navbar{
     padding: 2px;
-    overflow: hidden;
+   
 }
 
 
